--- a/timeline.css
+++ b/timeline.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
+
+.timeline__row_center_step {
+    width: 30px;
+    height: 30px;
+    left: calc(50% + 15px);
+    top: 30px;
+}
 /*====section_4====*/
 .timeline__mid_row {
     float: left;
@@ -71,10 +78,10 @@
         top: 50px;
     }
     .timeline__row_center_step {
-        width: 40px;
-        height: 40px;
-        border: 8px solid #2f0147;
-        margin: 0 0 0 -20px;
+        width: 30px;
+        height: 30px;
+        border: 4px solid #4fa2ae;
+        margin: 0 0 0 -30px;
         top: 40px;
     }
     .timeline__row_content_box {
@@ -102,11 +109,11 @@
     }
     .timeline__mid_row {
         float: none;
-        display: inline-block;
+        display: flex;
         vertical-align: middle;
         max-width: 370px;
-        padding: 0 0 0;
-        margin-top: 40px;
+        padding: 0 0 0 52px;
+        margin-top: 24px;
     }
     .timeline__mid_row:after {
         left: 14px;
@@ -132,9 +139,6 @@
     .timeline__row_content_box {
         width: calc(100% - 55px);
         float: right;
-        margin-top: 15px;
-        border: 2px solid #2f0147;
-        padding: 15px 15px;
     }
     .timeline__mid_row.reverse {
         flex-direction: inherit;
@@ -256,8 +260,8 @@
 
 @media (max-width: 1023px) {
     .timeline__row_center_step.viewing:before {
-        left: 10px;
-        width: 10px;
+        left: 6px;
+        width: 8px;
         height: 15px;
     }
 }
@@ -288,13 +292,6 @@
 
 .timeline__row_content_box {
     max-width: 275px;
-}
-
-.timeline__row_center_step {
-    width: 30px;
-    height: 30px;
-    left: calc(50% + 15px);
-    top: 30px;
 }
 
 .abn-timeline-time {
