--- a/timeline.css
+++ b/timeline.css
@@ -1,19 +1,80 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
+.text-center {
+    text-align: center;
+}
 
-.timeline__row_center_step {
+.abn_timeline__row_center_step {
     width: 30px;
     height: 30px;
-    left: calc(50% + 15px);
+    left: calc(50% - 15px);
     top: 30px;
 }
+
+.abn_timeline__section {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+    overflow-x: clip;
+    width: 100%;
+    position: relative;
+}
+
+.abn_timeline__container {
+    max-width: var(--wrapperWidth);
+    position: relative;
+    z-index: 1;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding: 0;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    box-sizing: border-box;
+}
+
+.abn_timeline__mid {
+    vertical-align: middle;
+    align-items: center;
+    flex-direction: column;
+    max-width: 1030px;
+    width: 100%;
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.abn_timeline__row_center_step {
+    position: absolute;
+    z-index: 10;
+    border-radius: 50%;
+}
+
+.abn_timeline__mid_week_box {}
+
+.abn_timeline__row_content_box {
+    float: left;
+    position: relative;
+    margin-top: -14px;
+}
+
+.week_heading {
+
+}
+
+
+
+
 /*====section_4====*/
-.timeline__mid_row {
+.abn_timeline__mid_row {
     float: left;
     width: 645px;
     position: relative;
-
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -23,10 +84,10 @@
     justify-content: space-between;
     padding: 35px 0;
 }
-.timeline__mid_row.reverse {
+.abn_timeline__mid_row.reverse {
     flex-direction: row-reverse;
 }
-.timeline__mid_row:after {
+.abn_timeline__mid_row:after {
     position: absolute;
     content: "";
     border-right: 3px dotted #2f0147;
@@ -36,19 +97,19 @@
     margin-left: -1px;
 }
 
-.timeline__row_center_step {
+.abn_timeline__row_center_step {
     display: block !important;
 }
-.timeline__mid_row:first-child:after {
+.abn_timeline__mid_row:first-child:after {
     top: 45px;
 }
-.timeline__mid_row:last-child:after {
+.abn_timeline__mid_row:last-child:after {
     bottom: -35px;
 }
-.timeline__mid_row.reverse .timeline__mid_week_box {
+.abn_timeline__mid_row.reverse .abn_timeline__mid_week_box {
     text-align: left;
 }
-/*.timeline__row_content_box:after {
+/*.abn_timeline__row_content_box:after {
     position: absolute;
     content: "";
     left: -15px;
@@ -57,45 +118,51 @@
     border-bottom: 13px solid transparent;
     border-right: 13px solid #2f0147;
 }*/
-.timeline__mid_row.reverse .timeline__row_content_box:after {
+.abn_timeline__mid_row.reverse .abn_timeline__row_content_box:after {
     border-right: none;
     border-left: 13px solid #2f0147;
     left: auto;
     right: -15px;
 }
-/*.timeline__mid_row:nth-child(odd) .timeline__row_content_box {
+/*.abn_timeline__mid_row:nth-child(odd) .abn_timeline__row_content_box {
     background-color: #ffe0eb;
 }
-.timeline__mid_row:nth-child(even) .timeline__row_content_box {
+.abn_timeline__mid_row:nth-child(even) .abn_timeline__row_content_box {
     background-color: #fff0f5;
 }*/
 
 @media only screen and (max-width: 1023px) {
-    .timeline__mid_row {
+    .abn_timeline__mid_row {
         padding: 25px 0;
     }
-    .timeline__mid_row:first-child:after {
+    .abn_timeline__mid_row:first-child:after {
         top: 50px;
     }
-    .timeline__row_center_step {
+    .abn_timeline__row_center_step {
         width: 30px;
         height: 30px;
         border: 4px solid #4fa2ae;
         margin: 0 0 0 -30px;
         top: 40px;
     }
-    .timeline__row_content_box {
+    .abn_timeline__row_content_box {
         width: 43%;
     }
-    .timeline__row_content_box:after {
+    .abn_timeline__row_content_box:after {
         top: 20px;
     }
     .timeline__row_text {
         font-size: 18px;
         line-height: 26px;
     }
-    .timeline__mid_row:last-child:after {
+    .abn_timeline__mid_row:last-child:after {
         bottom: -10px;
+    }
+}
+@media only screen and (min-width: 767px) {
+    .abn_timeline__mid {     
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
 @media only screen and (max-width: 767px) {
@@ -104,28 +171,29 @@
     .timeline__product3 {
         display: none;
     }
-    .timeline__mid {
+    .abn_timeline__mid {
         margin-top: 0;
+        padding-left: 32px;
     }
-    .timeline__mid_row {
+    .abn_timeline__mid_row {
         float: none;
         display: flex;
         vertical-align: middle;
         max-width: 370px;
-        padding: 0 0 0 52px;
+        padding: 0 0 14px 52px;
         margin-top: 24px;
     }
-    .timeline__mid_row:after {
+    .abn_timeline__mid_row:after {
         left: 14px;
         margin: 0 0 0;
         top: 3px;
         z-index: 1;
         bottom: -40px;
     }
-    .timeline__mid_row:first-child:after {
+    .abn_timeline__mid_row:first-child:after {
         top: 1px;
     }
-    .timeline__row_center_step {
+    .abn_timeline__row_center_step {
         left: 0;
         margin: 0 0 0 0;
         width: 30px;
@@ -133,34 +201,38 @@
         z-index: 2;
         top: 0;
     }
-    .timeline__mid_week_box {
+    .abn_timeline__mid_week_box {
         width: calc(100% - 55px);
     }
-    .timeline__row_content_box {
+    .abn_timeline__row_content_box {
         width: calc(100% - 55px);
         float: right;
     }
-    .timeline__mid_row.reverse {
+    .abn_timeline__mid_row.reverse {
         flex-direction: inherit;
     }
-    .timeline__mid_row.reverse .timeline__row_content_box:after,
-    .timeline__row_content_box:after {
+    .abn_timeline__mid_row.reverse .abn_timeline__row_content_box:after,
+    .abn_timeline__row_content_box:after {
         display: none;
         border-left: none;
         border-right: 13px solid #2f0147;
         right: auto;
         left: -15px;
     }
-    .timeline__mid_row:last-child:after {
+    .abn_timeline__mid_row:last-child:after {
         bottom: 0;
     }
     .timeline__row_text {
         font-size: 17px;
         line-height: 25px;
     }
+    .abn-timeline-time {
+        margin-bottom: 16px;
+    }
+
 }
 
-.timeline__mid_row.timeline__entry_point:before {
+.abn_timeline__mid_row.abn_timeline__entry_point:before {
     position: absolute;
     top: 60px;
     content: "";
@@ -173,7 +245,7 @@
     transition: height 0.3s ease-out; /* Add smooth transition */
 }
 
-.timeline__mid_row.timeline__entry_point:after {
+.abn_timeline__mid_row.abn_timeline__entry_point:after {
     position: absolute;
     top: 60px;
     content: "";
@@ -186,80 +258,80 @@
 }
 
 @media (max-width: 767px) {
-    .timeline__mid_row.timeline__entry_point:before {
+    .abn_timeline__mid_row.abn_timeline__entry_point:before {
         top: 20px;
         left: 14px;
     }
-    .timeline__mid_row.timeline__entry_point:after {
+    .abn_timeline__mid_row.abn_timeline__entry_point:after {
         left: 14px;
         top: 25.2px;
     }
 }
 
 @media (max-width: 425px) {
-    .timeline__mid_row.timeline__entry_point:before {
+    .abn_timeline__mid_row.abn_timeline__entry_point:before {
         top: 20px;
         left: 14px;
     }
-    .timeline__mid_row.timeline__entry_point:after {
+    .abn_timeline__mid_row.abn_timeline__entry_point:after {
         left: 14px;
         top: 25.2px;
     }
 }
 
-.timeline__row_center_step {
+.abn_timeline__row_center_step {
     border: none;
     background: #C3C3C3;
     transform: scale(0.95);
     transition: all 0.3s ease-out;
 }
 
-.timeline__row_center_step.viewing {
+.abn_timeline__row_center_step.viewing {
     background: #4FA2AE;
     transform: scale(1);
 }
 
-.timeline__row_center_step.viewing:before {
+.abn_timeline__row_center_step.viewing:before {
     content: "";
     position: absolute;
-    left: 7px;
-    top: 40%;
-    width: 8px;
+    left: 5px;
+    top: 10px;
+    width: 7px;
     height: 14px;
     border: solid #ffffff;
     border-width: 0 3px 3px 0;
     transform: rotate(45deg) translateY(-50%);
 }
-.timeline__row_content_box svg {
+.abn_timeline__row_content_box svg {
     transform: rotate(0deg);
     transition: transform 0.5s ease-out;
 }
 
-.timeline__row_content_box.viewing svg {
+.abn_timeline__row_content_box.viewing svg {
     transform: rotate(360deg);
 }
 
 /* Card Animation Styles */
-.timeline__row_content_box {
+.abn_timeline__row_content_box {
     opacity: 0;
     transition: opacity 0.5s ease-out, transform 0.5s ease-out;
 }
 
-.timeline__row_content_box.card {
+.abn_timeline__row_content_box.card {
     transform: translateX(50px);
 }
 
-.timeline__row_content_box.card-reverse {
+.abn_timeline__row_content_box.card-reverse {
     transform: translateX(-50px);
 }
 
-.timeline__row_content_box.viewing {
+.abn_timeline__row_content_box.viewing {
     opacity: 1;
     transform: translateX(0);
 }
 
 @media (max-width: 1023px) {
-    .timeline__row_center_step.viewing:before {
+    .abn_timeline__row_center_step.viewing:before {
         left: 6px;
         width: 8px;
         height: 15px;
@@ -267,13 +339,13 @@
 }
 
 @media (max-width: 767px) {
-    .timeline__row_center_step.viewing:before {
+    .abn_timeline__row_center_step.viewing:before {
         left: 5px;
         top: 35%;
     }
 }
 
-.timeline__mid_row:after {
+.abn_timeline__mid_row:after {
     content: none;
 }
 
@@ -290,8 +362,9 @@
 
 
 
-.timeline__row_content_box {
+.abn_timeline__row_content_box {
     max-width: 275px;
+    overflow-x: hidden;
 }
 
 .abn-timeline-time {
@@ -303,15 +376,17 @@
     color: #FFFFFF;
     background: #4FA2AE;
     padding: 14px;
-    width: 100%;
+    max-width: 276px !important;
     margin-bottom: 24px;
 }
 
 .abn-timeline-time img {
     width: 24px;
+    display: inline-block;
+    margin: -6px 12px 0 0;
 }
 
-.timeline__row_content_box p {
+.abn_timeline__row_content_box p {
     color: #121212 !important;
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
